# lob-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  lob_bench.cpp
examples/: backtest_demo.cpp  simple_backtest.cpp  simple_session.cpp
examples/data/: sample_events.csv
include/lob/: matching_engine.hpp  matching_engine_t.hpp  order.hpp  order_book.hpp  price_level.hpp  types.hpp
include/lob/backtest/: backtest_engine.hpp  market_data_event.hpp  market_data_replay.hpp  market_event.hpp  mean_reversion_strategy.hpp  performance.hpp  performance_report.hpp  portfolio.hpp  runner.hpp  strategy.hpp
include/lob/itch/: messages.hpp  parser.hpp
include/lob/replay/: replay.hpp
src/: matching_engine.cpp  order_book.cpp
src/backtest/: backtest_engine.cpp  market_data_replay.cpp  market_event.cpp  performance.cpp  portfolio.cpp  runner.cpp
src/itch/: parser.cpp
src/replay/: main.cpp  replay.cpp
tests/: CMakeLists.txt  matching_engine_t_test.cpp  matching_engine_test.cpp  order_book_test.cpp
tests/backtest/: backtest_test.cpp
tests/itch/: parser_test.cpp
tests/replay/: replay_test.cpp
